Squashing bugs and making more responsive

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -637,7 +637,7 @@ div.projectGalleryShowcaseImage { /* Avoided using flex because want to support 
   margin-left: auto;
   margin-right: auto;
  margin-top: 24px;
-  margin-bottom:auto;
+  margin-bottom:24px;
 
 
 
@@ -645,7 +645,7 @@ div.projectGalleryShowcaseImage { /* Avoided using flex because want to support 
 	text-align: center;
 
 		
-  width: 320px;
+  width: 20%;
   height: auto;
 
 max-width: 100%;
